--- a/style.css
+++ b/style.css
@@ -8,16 +8,21 @@ body, h1, p {
 body {
     background-color: #f6f6f6;
     font-family: 'Arial', sans-serif;
+    background-image: url('../images/pokemon.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 /* Style the login container */
 .login-container {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     margin: 100px auto;
     max-width: 400px;
     padding: 20px;
+    text-align: center;
 }
 
 /* Style the title */
@@ -25,7 +30,6 @@ body {
     color: #e74c3c;
     font-size: 32px;
     margin-bottom: 20px;
-    text-align: center;
 }
 
 /* Style the input fields and labels */
