--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body, h1, p {
 body {
     background-color: #f6f6f6;
     font-family: 'Arial', sans-serif;
-    background-image: url('../images/pokemon.png');
+    background-image: url('pokemon.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
